--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <table border="0" cellpadding="0" cellspacing="0" style="width: 100%; max-width: 500px; padding: 20px">
     <tr>
         <td width="30%" valign="top">
-            <img src="https://github.com/dev-ambinintsoa/dev-ambinintsoa.github.io/blob/main/img/logo/Img.jpg" alt="dev-ambinintsoa" style="width: 100%; min-width: 140px; display: block; border-radius: 50%">
+            <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/img.jpg?raw=true" alt="dev-ambinintsoa" style="width: 100%; min-width: 140px; display: block; border-radius: 50%">
         </td>
         <td width="70%" valign="top" style="padding: 10px 0 10px 15px;">
             <h2 style="margin: 0; padding: 0; font-size: 1.2rem; text-transform: uppercase;">Ambinintsoa <span style="color: #0077b6;">Mananjara Herizo</span></h2>
