--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <table border="0" cellpadding="0" cellspacing="0" style="width: 100%; max-width: 500px; padding: 20px">
     <tr>
         <td width="30%" valign="top">
-            <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/img.jpg?raw=true" alt="dev-ambinintsoa" style="width: 100%; min-width: 140px; display: block; border-radius: 50%">
+            <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/assets/img.jpg?raw=true" alt="dev-ambinintsoa" style="width: 100%; min-width: 140px; display: block; border-radius: 50%">
         </td>
         <td width="70%" valign="top" style="padding: 10px 0 10px 15px;">
             <h2 style="margin: 0; padding: 0; font-size: 1.2rem; text-transform: uppercase;">Ambinintsoa <span style="color: #0077b6;">Mananjara Herizo</span></h2>
@@ -19,20 +19,20 @@
                 <p style="margin: 0 2px; padding: 0; font-weight: 600; font-size: .6rem;">work@luckymhz.com</p>
             </div>
             <div style="display: flex; justify-content: start; gap: 5px; margin: .6rem 0; padding: 0;">
-                <a href="https://www.luckymhz.com" target="_blank" style="margin: 0 2px; color: #0077b6; padding: 0; font-weight: 600; font-size: .6rem;">www.luckymhz.com</a>
+                <a href="https://www.luckymhz.com" target="_blank" style="margin: 0 2px; color: #0077b6; padding: 0; font-weight: 600; font-size: .6rem;">visit my blog here!</a>
                 <p style="margin: 0 2px; padding: 0; font-weight: 600; font-size: .6rem;">|</p>
-                <a href="https://dev-ambinintsoa.github.io" target="_blank" style="margin: 0 2px; color: #0077b6; padding: 0; font-weight: 600; font-size: .6rem;">dev-ambinintsoa.github.io</a>
+                <a href="https://dev-ambinintsoa.github.io" target="_blank" style="margin: 0 2px; color: #0077b6; padding: 0; font-weight: 600; font-size: .6rem;">Visit my portfolio here!</a>
             </div>
             <!-- Social icons go here -->
             <div class="social-media" style="display: flex; margin: 0; padding: 0;">
                 <a href="https://www.linkedin.com/in/dev-ambinintsoa/" target="_blank" title="LinkedIn" style="display: inline-flex; justify-content: center; align-items: center; width: 2rem; height: 2rem; background: transparent; border-radius: 50%; box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, .2); font-size: 2rem; color: #bae8e8; margin: .5rem .5rem .5rem 0; transition: background .5s ease, color .5s ease;">
-                    <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/linkedin-50.png?raw=true" alt="LinkedIn" style="width: 1.2rem; height: 1.2rem;">
+                    <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/assets/linkedin-50.png?raw=true" alt="LinkedIn" style="width: 1.2rem; height: 1.2rem;">
                 </a>
                 <a href="https://github.com/dev-luckymhz" target="_blank" title="GitHub" style="display: inline-flex; justify-content: center; align-items: center; width: 2rem; height: 2rem; background: transparent;  border-radius: 50%; box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, .2); font-size: 2rem; color: #bae8e8; margin: .5rem .5rem .5rem 0; transition: background .5s ease, color .5s ease;" >
-                    <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/github-50.png?raw=true" alt="GitHub" style="width: 1.2rem; height: 1.2rem;">
+                    <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/assets/github-50.png?raw=true" alt="GitHub" style="width: 1.2rem; height: 1.2rem;">
                 </a>
                 <a href="https://join.skype.com/invite/HbzSFlYacTkI" target="_blank" title="Skype" style="display: inline-flex; justify-content: center; align-items: center; width: 2rem; height: 2rem; background: transparent;border-radius: 50%; box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, .2); font-size: 2rem; color: #bae8e8; margin: .5rem .5rem .5rem 0; transition: background .5s ease, color .5s ease;">
-                    <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/skype-50.png?raw=true" alt="Skype" style="width: 1.2rem; height: 1.2rem;">
+                    <img src="https://github.com/dev-ambinintsoa/mail-signature/blob/main/assets/skype-50.png?raw=true" alt="Skype" style="width: 1.2rem; height: 1.2rem;">
                 </a>
             </div>
         </td>
