--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div style="display: flex; justify-content: start; gap: 5px; margin: .6rem 0; padding: 0;">
                 <a href="https://www.luckymhz.com" target="_blank" style="margin: 0 2px; color: #0077b6; padding: 0; font-weight: 600; font-size: .6rem;">visit my blog here!</a>
                 <p style="margin: 0 2px; padding: 0; font-weight: 600; font-size: .6rem;">|</p>
-                <a href="https://dev-ambinintsoa.github.io" target="_blank" style="margin: 0 2px; color: #0077b6; padding: 0; font-weight: 600; font-size: .6rem;">Visit my portfolio here!</a>
+                <a href="https://ambinintsoaherizo.com" target="_blank" style="margin: 0 2px; color: #0077b6; padding: 0; font-weight: 600; font-size: .6rem;">Visit my portfolio here!</a>
             </div>
             <!-- Social icons go here -->
             <div class="social-media" style="display: flex; margin: 0; padding: 0;">
